fixed dark mode icons

--- a/colors.css
+++ b/colors.css
@@ -3,4 +3,4 @@
 .colortest{ color: #e5c396; }
 .colortest{ color: #f2a663; }
 .colortest{ color: #8badd9; }
-.colortest{ color: #b4a084; }
+.colortest{ color: #ffffff4b; }
